[metadata]
name = rowantree.auth.service
version = 0.8.0
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = The Rowan Tree Authentication and Authorization Service
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
    uvicorn[standard]~=0.18
    fastapi~=0.81
    mysql-connector-python~=8.0
    starlette~=0.19
    pydantic~=1.10
    python-multipart>=0.0.5
    python-jose~=3.3
    bcrypt~=4.0
    passlib~=1.7
    rowantree.auth.sdk~=0.3
    rowantree.common.sdk~=0.1
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
